Published the package

--- a/coda/package.json
+++ b/coda/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "coda",
+  "name": "@zeionara/coda",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/zeionara"
+  },
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
