--- a/coda/package.json
+++ b/coda/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/zeionara"
   },
-  "version": "0.1.0",
+  "version": "0.5.0",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -46,5 +46,12 @@
   },
   "devDependencies": {
     "typescript": "^4.9.5"
-  }
+  },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "files": [
+    "/build"
+  ]
 }
